--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/blthiewes/WhoSaysNo">View On GitHub</a></li>
+          <li class="fork"><a href="http://blthiewes.github.io/WhoSaysNo/o">Who Says No</a></li>
           <li class="downloads"><a href="https://github.com/blthiewes/WhoSaysNo/zipball/master">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/blthiewes/WhoSaysNo/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
