--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="untitled3">
+<html ng-app="WhoSaysNo">
   <head>
     <meta charset="utf-8">
     <title>WSN?</title>
@@ -41,6 +41,8 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.0/angular-material-icons.min.js"></script>
 
   </body>
 </html>
