--- a/index.html
+++ b/index.html
@@ -1,3 +1,73 @@
-<!doctype html><html ng-app=WhoSaysNo><head><meta charset=utf-8><title>WSN?</title><meta name=description content=""><meta name=viewport content="width=device-width"><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel=stylesheet href=styles/vendor-bfbf54ee58.css><link rel=stylesheet href=styles/app-d728ec456d.css></head><body><!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]--><div ui-view></div><script src=scripts/vendor-84d1b83d4d.js></script><script src=scripts/app-9c61ad75b6.js></script><script src=//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.0/angular-material-icons.min.js></script></body></html>
+<!DOCTYPE html>
+<html ng-app="myapp">
+
+<head>
+    <title>Who Says No?</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+</head>
+
+<body>
+
+    <div class="container">    
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div id="navbar" class="navbar-collapse collapse">                    
+                    <div class="navbar-header">
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button>
+                      <a class="navbar-brand" ui-sref="home">WSN?</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li><a ui-sref="rules">Rules</a></li>
+                        <li><a ui-sref="history">History</a></li>
+<!--
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Nav header</li>
+                                <li><a href="#">Separated link</a></li>
+                                <li><a href="#">One more separated link</a></li>
+                            </ul>
+                        </li>
+-->
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="http://games.espn.go.com/ffl/leagueoffice?leagueId=1262170">ESPN</a></li>
+                    </ul>
+        </div><!--/.nav-collapse -->
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="well" ui-view="viewA"></div>        
+            </div>
+        </div>    
+    </div>     
+  
+    <!-- Angular -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+    <!-- UI-Router -->
+    <script src="//angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
+
+    <!-- App Script -->
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="modules/home/home.js"></script>
+    <script src="modules/history/history.js"></script>
+
+</body>
+
+</html>
